Started fixing css for scrollbar, not complete yet

--- a/src/style/control.css
+++ b/src/style/control.css
@@ -21,8 +21,6 @@
     background-color: #f1f1f1;
     display: block;
     border-style: solid;
-    width: 8px;
-    height: 14px;
 }
 /* Up */
 ::-webkit-scrollbar-button:single-button:vertical:decrement {
@@ -42,6 +40,26 @@
 }
 
 ::-webkit-scrollbar-button:vertical:single-button:increment:hover {
+    background: #c0c0c0;
+}
+/* Left */
+::-webkit-scrollbar-button:single-button:horizontal:decrement {
+    border-width: 8px 0px 8px 8px;
+    border-color: transparent transparent #555555 transparent;
+    /*border-bottom-left-radius: 5px;*/
+}
+
+::-webkit-scrollbar-button:single-button:horizontal:decrement:hover {
+    background: #c0c0c0;
+}
+/* Right */
+::-webkit-scrollbar-button:single-button:horizontal:increment {
+    border-width: 8px 8px 8px 0px;
+    border-color: transparent transparent #555555 transparent;
+    /*border-bottom-right-radius: 5px;*/
+}
+
+::-webkit-scrollbar-button:single-button:horizontal:increment:hover {
     background: #c0c0c0;
 }
 
